--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Choose Your Seat</h1>
+    <h1>Choose Your Desk</h1>
     <div id="seatChart" class="seat-chart"></div>
     <button id="confirmBtn" disabled>Confirm Selection</button>
 
