--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Choose Your Desk</h1>
+    
+    <!-- Name Input Field -->
+    <label for="studentName">Enter Your Name:</label>
+    <input type="text" id="studentName" placeholder="Your Name">
+    
     <div id="seatChart" class="seat-chart"></div>
     <button id="confirmBtn" disabled>Confirm Selection</button>
 
