--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <h1>Choose Your Desk</h1>
-    
+
+    <!-- Class Selector -->
+    <label for="classSelector">Select Class:</label>
+    <select id="classSelector">
+        <option value="class1">Class 1</option>
+        <option value="class2">Class 2</option>
+        <option value="class3">Class 3</option>
+        <option value="class4">Class 4</option>
+        <option value="class5">Class 5</option>
+        <option value="class6">Class 6</option>
+    </select>
+
     <!-- Name Input Field -->
     <label for="studentName">Enter Your Name:</label>
     <input type="text" id="studentName" placeholder="Your Name">
