--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <!-- Class Selector -->
     <label for="classSelector">Select Class:</label>
     <select id="classSelector">
-        <option value="class1">Class 1</option>
-        <option value="class2">Class 2</option>
-        <option value="class3">Class 3</option>
-        <option value="class4">Class 4</option>
-        <option value="class5">Class 5</option>
-        <option value="class6">Class 6</option>
+        <option value="Period1">Period 1</option>
+        <option value="Period2">Period 2</option>
+        <option value="Period3">Period 3</option>
+        <option value="Period5">Period 5</option>
+        <option value="Period6">Period 6</option>
     </select>
 
     <!-- Name Input Field -->
